force-app/main/default/objects/Rev_Covamo_Header__c/Rev_Covamo_Header__c.object-meta.xml
<CustomObject>
    <label>Covamo Header</label>
    <nameField>
        <displayFormat>Cov Header - {0000}</displayFormat>
        <label>Covamo Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covamo Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>