force-app/main/default/objects/Rev_Covamo_Header__c/fields/Analysis_Period_Setting__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Period_Setting__c</fullName>
    <label>Analysis Period Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>