force-app/main/default/objects/Rev_Covamo_Header__c/fields/Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>Base_Unit__c</fullName>
    <label>Base Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>