force-app/main/default/objects/Rev_Covamo_Header__c/fields/Covamo_Financial_Summary__c.field-meta.xml
<CustomField>
    <fullName>Covamo_Financial_Summary__c</fullName>
    <defaultValue>&apos;/lightning/r/Report/00O0C000000L0yTUAS/view?fv0=Cov Header - 0194&apos;</defaultValue>
    <label>Covamo Financial Summary</label>
    <type>Url</type>
</CustomField>