force-app/main/default/objects/Rev_Covamo_Header__c/fields/Covamo_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Covamo_Start_Year__c</fullName>
    <label>Covamo Start Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>