force-app/main/default/objects/Rev_Covamo_Header__c/fields/Income_Tax_Payable_Days__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Payable_Days__c</fullName>
    <label>Income Tax Payable Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>