force-app/main/default/objects/Rev_Covamo_Header__c/fields/Income_Tax_Payable_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Payable_Percentage__c</fullName>
    <label>Income Tax Payable Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>