force-app/main/default/objects/Rev_Covamo_Header__c/fields/Inflation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Inflation_Rate__c</fullName>
    <label>Inflation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>