force-app/main/default/objects/Rev_Covamo_Header__c/fields/Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency__c</fullName>
    <label>Local Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>