force-app/main/default/objects/Rev_Covamo_Header__c/fields/Payment_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Days__c</fullName>
    <label>Payment Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>