force-app/main/default/objects/Rev_Covamo_Header__c/fields/Valuation_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Start_Year__c</fullName>
    <label>Valuation Start Year</label>
    <type>Date</type>
</CustomField>