force-app/main/default/objects/Rev_Covamo_Header__c/fields/VAT_Duties_payable_receivable__c.field-meta.xml
<CustomField>
    <fullName>VAT_Duties_payable_receivable__c</fullName>
    <label>VAT / Duties payable &amp; receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>