force-app/main/default/objects/Rev_Covamo_Header__c/fields/Weighted_Avearge_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Avearge_Percentage__c</fullName>
    <label>Weighted Avearge Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>