force-app/main/default/objects/Rev_Covamo_Header__c/listViews/Covamo_Header_Edit_Rev_Covamo_Header.listView-meta.xml
<ListView>
    <fullName>Covamo_Header_Edit_Rev_Covamo_Header</fullName>
    <filterScope>Queue</filterScope>
    <label>Covamo Header Edit</label>
    <queue>Covamo_Header_Edit</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>